2007-11-11  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/behaviour-path.ccg:
	* clutter/src/behaviour-path.hg: Initial implementation of the BehaviourPath
	class
	* clutter/src/clutter_signals.defs: modified signal signature by hand to
	change the knot_reached argument to const.

2007-11-11  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/behaviour-depth.hg: removed incorrect comment (copy/paste
	error)
	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/behaviour-opacity.ccg:
	* clutter/src/behaviour-opacity.hg: initial implementation of the
	BehaviourOpacity class

2007-11-11  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/behaviour-depth.ccg:
	* clutter/src/behaviour-depth.hg: initial implementation of the
	BehaviourDepth class

2007-11-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/clutter_signals.defs: re-generate signals and manually change
	one parameter (in "knot_reached") to const since it didn't get detected
	properly.  I'm not sure if this is the right way to do that or not
	* clutter/cluttermm/types.h: add Knot type
	* tools/m4/convert_cluttermm.m4:
	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/behaviour-bspline.ccg:
	* clutter/src/behaviour-bspline.hg: add initial implementation of the
	BehaviourBspline class

2007-11-09  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/alpha.hg: added missing get_alpha() function
	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/behaviour.ccg:
	* clutter/src/behaviour.hg:
	* clutter/src/clutter_vfuncs.defs:
	* tools/m4/convert_cluttermm.m4: added initial wrapper for Behavior

2007-11-09  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/alpha.ccg:
	* clutter/src/alpha.hg: added initial wrapper for ClutterAlpha
	* clutter/src/timeline.hg: made Timeline only accessible via RefPtr
