@@ -1,9 +1,4 @@
 ## Copyright (c) 2001
 ## The cluttermm development team.
 
-## This voodoo stuff lets automake see the subdirs
-## without including them into recursive builds.
-if CLUTTERMM_FALSE
 SUBDIRS = reference
-endif
-DIST_SUBDIRS = reference
